Fix spacing issues on mobile

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -195,6 +195,10 @@
     gap: 12.8rem;
   }
 
+  .projects-description {
+    transform: translateY(-2.4rem);
+  }
+
   .contact-link:link,
   .contact-link:visited {
     font-size: 3.4em;
